# doze

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.github/: FUNDING.yml
backends/doze_clap/: Cargo.toml  README.md
backends/doze_clap/src/: lib.rs
backends/doze_clap/src/events/: midi.rs  param.rs  transport.rs
backends/doze_clap/src/extensions/: audio_ports.rs  params.rs
backends/doze_clap/src/factory/: mod.rs  plugin.rs
backends/doze_clap/src/plugin/: mod.rs
crates/doze_clap/: Cargo.toml  README.md  TODO.md
crates/doze_clap/src/: features.rs  lib.rs  process.rs
crates/doze_clap/src/events/: iter.rs  midi.rs  mod.rs  param.rs  transport.rs
crates/doze_clap/src/extensions/: mod.rs  params.rs
crates/doze_clap/src/plugin/: descriptor.rs  feature.rs  mod.rs
crates/doze_common/: Cargo.toml  README.md
crates/doze_common/src/: lib.rs
crates/doze_common/src/buffer/: mod.rs
crates/doze_common/src/buffer/pod/: mod.rs  ping_pong.rs  ring.rs
crates/doze_common/src/collections/: hash.rs  mod.rs  type_map.rs
crates/doze_common/src/fmt/: mod.rs
crates/doze_common/src/identifier/: hash.rs  mod.rs  strong.rs  weak.rs
crates/doze_common/src/io/: mod.rs  reader.rs  slice.rs  writer.rs
crates/doze_common/src/sample/: mod.rs  primitive.rs
crates/doze_common/src/storage/: arena.rs  history.rs  mod.rs  vec.rs
crates/doze_plugin/: Cargo.toml  README.md  TODO.md
crates/doze_plugin/src/: events.rs  features.rs  lib.rs  process.rs
crates/doze_plugin/src/extensions/: audio_ports.rs  mod.rs  params.rs
crates/doze_plugin/src/factory/: plugin.rs
crates/doze_plugin/src/features/: mod.rs
crates/doze_plugin/src/plugin/: descriptor.rs  feature.rs  mod.rs
examples/gain/: Cargo.toml
examples/gain/src/: lib.rs
src/: lib.rs
