[package]
name = "doze"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[workspace]
members = [
    "crates/doze_common",
    "crates/doze_plugin",
    "crates/doze_clap",

    # examples
    "examples/gain"
]

[workspace.package]
authors = [ "Connor Davis <connor@scequ.com>" ]
repository = "https://github.com/ConcurAc/doze"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
doze.path = "."
doze_common.path = "crates/doze_common"
doze_plugin.path = "crates/doze_plugin"

doze_clap.path = "crates/doze_clap"

[dependencies]
doze_plugin.workspace = true
doze_common.workspace = true
