[package]
name = "doze"
version.workspace = true
edition = "2024"
description = "Modular and composable audio plugin abstraction layer for Rust"
keywords = [ "doze", "audio", "plugin" ]
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[workspace]
members = [
    "crates/doze_common",
    "crates/doze_plugin",

    "backends/doze_clap",

    # examples
    "examples/gain"
]

[workspace.package]
authors = [ "Connor Davis <connor@scequ.com>" ]
repository = "https://github.com/ConcurAc/doze"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
doze = { path = ".", version = "*" }
doze_common = { path = "crates/doze_common", version = "0.1" }
doze_plugin = { path = "crates/doze_plugin", version = "0.1" }

doze_clap = { path = "backends/doze_clap", version = "0.1" }

[dependencies]
doze_plugin.workspace = true
doze_common.workspace = true
