[package]
name = "doze_clap"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
doze_common = { workspace = true, features = [ "std" ] }
doze_plugin = { workspace = true }

clap-sys = "0.5.0"

bitflags = "2.11"
parking_lot = "0.12"
