[package]
name = "doze_common"
version = "0.1.0"
edition = "2024"

[features]
default = [  ]
alloc = [ ]
std = [ "alloc", "rapidhash/std" ]

[dependencies]

derive_more = { version = "2.0.1", features = [ "deref", "deref_mut"] }
bytemuck = "1.23.2"
heapless = "0.9.2"

rapidhash = { version = "4.4.1", default-features = false }

midi-consts = "0.1.0"
