[package]
name = "doze_common"
version = "0.1.0"
edition = "2024"

[features]
default = [  ]
alloc = [ ]
std = [ "alloc", "collections" ]
collections = ["dep:rapidhash", "dep:indexmap", "rapidhash/std", "indexmap/std"]

[dependencies]

derive_more = { version = "2.0.1", features = [ "deref", "deref_mut"] }
bytemuck = "1.23.2"
heapless = "0.9.2"

midi-consts = "0.1.0"

rapidhash = { version = "4.4.1", optional = true, default-features = false }
indexmap = { version = "2.14.0", optional = true, default-features = false }
