[package]
name = "doze_common"
version.workspace = true
edition = "2024"
description = "Common types and utilities for doze"
keywords = [ "doze", "audio" ]
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[features]
default = [ "std" ]
alloc = [ ]
std = [ "alloc", "collections" ]
collections = ["dep:rapidhash", "dep:indexmap", "rapidhash/std", "indexmap/std"]

[dependencies]

derive_more = { version = "2.0.1", features = [ "deref", "deref_mut"] }

bytemuck = "1.23.2"
heapless = "0.9.2"

midi-consts = "0.1.0"

rapidhash = { version = "4.4.1", optional = true, default-features = false }
indexmap = { version = "2.14.0", optional = true, default-features = false }
