[package]
name = "doze_plugin"
version = "0.1.0"
edition = "2024"
description = "Audio plugin abstraction API for doze"
keywords = [ "doze", "audio", "plugin" ]
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
doze_common.workspace = true

bitflags = "2.11"
parking_lot = "0.12"
