[package]
name = "doze_plugin"
version.workspace = true
edition = "2024"
description = "Audio plugin abstraction API for doze"
keywords = [ "doze", "audio", "plugin" ]
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
doze_common.workspace = true

bitflags = "2.11"
parking_lot = "0.12"
